# solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: expsolver.cpp  expsolver.h  solver.cpp  tokenizer.cpp  tokenizer.h
tests/: test_expsolver.cpp  test_tokenizer.cpp
